feat: set-up redux toolkit with basic auth slice

--- a/.prettierrc
+++ b/.prettierrc
@@ -16,7 +16,7 @@
     "",
     "<THIRD_PARTY_MODULES>",
     "",
-    "^@(components|assets|views|/.*)?$",
+    "^@(components|assets|views|store|/.*)?$",
     "",
     "^[./]",
     ""
