--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,6 +27,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@assets/*": ["src/assets/*"],
+      "@store/*": ["src/store/*"],
     },
   },
   "include": ["src"]
